--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "ce-ts-demo",
+  "name": "React-TS-Chrome-Ext",
   "version": "1.0",
-  "description": "TypeScript Chrome Extension Demo",
+  "description": "Use React + TypeScript + Antd to develop Chrome Extension",
   "icons": {
     "16": "images/icon.png",
     "48": "images/icon.png",
@@ -10,7 +10,7 @@
   "manifest_version": 2,
   "page_action": {
     "default_icon": "images/icon.png",
-    "default_title": "ce-ts-demo",
+    "default_title": "React-TS-Chrome-Ext",
     "default_popup": "index.html"
   },
   "background": {
