--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dom": "^17.0.1",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.1",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
